# MyKiroDiffusionModelLab

./: .env.example  .gitignore  CONTRIBUTING.md  DRY_RUN_RESULTS.md  FINAL_STATUS.md  GETTING_STARTED.md  LICENSE  README.md  dry_run_test.py  lab_runner.py  pyproject.toml  requirements.txt  setup.sh  test_lab_runner.py  test_setup.py  validate_setup.py
docs/: diffusion_theory.md  troubleshooting.md
exercises/: exercise_1_basic_generation.py
notebooks/: 01_introduction_to_diffusers.ipynb
src/: __init__.py  diffusion_lab.py
